--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,12 @@
     {
       "src": "/(.*)",
       "dest": "/api/index.go",
-      "methods": ["GET", "POST", "OPTIONS"]
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Origin, Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization",
+        "Access-Control-Max-Age": "86400"
+      }
     }
   ]
 }
